main/default/objects/Product_Fees__c/Product_Fees__c.object-meta.xml
<CustomObject>
    <label>Product Fees</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>