main/default/objects/Product_Fees__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost per Calendar Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>