main/default/objects/Product_Fees__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <label>Fees</label>
    <length>100</length>
    <type>Text</type>
</CustomField>