main/default/objects/Product_Fees__c/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <label>Home Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Home_Country_List</valueSetName>
    </valueSet>
</CustomField>